ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail135.hs
-- A missing kind check made GHC 6.4 crash on this one

module ShouldFail where

class Foo f where
        baa :: f a -> f

instance Foo Maybe where
        baa z = z
